--- a/KochZeit/culture.html
+++ b/KochZeit/culture.html
@@ -31,7 +31,7 @@
     <meta name="twitter:image" content="https://www.kochzeit.de/images/culture-og.jpg">
     
     <link rel="icon" type="image/jpeg" href="images/favicon.jpg">
-    <link rel="preload" as="image" href="images/kultur_bg.jpg">
+    <link rel="preload" as="image" href="images/herooooo.jpg">
     <link rel="preload" as="image" href="images/Regionale Spezialitäten.jpg">
     <link rel="preload" as="image" href="images/Feiertage & Feste.jpg">
     <link rel="preload" as="image" href="images/Deutsche Tischkultur.jpg">
@@ -133,7 +133,9 @@
     <main>
         <section class="kultur-hero">
             <div class="hero-images">
-                <div class="hero-image active" style="background-image: url('images/kultur_bg.jpg');"></div>
+                <div class="hero-image active" style="background-image: url('images/herooooo.jpg');">
+                    <img src="images/herooooo.jpg" alt="" loading="eager" fetchpriority="high" style="display: none;">
+                </div>
                 <div class="hero-image" style="background-image: url('images/Regionale Spezialitäten.jpg');"></div>
                 <div class="hero-image" style="background-image: url('images/Feiertage & Feste.jpg');"></div>
                 <div class="hero-image" style="background-image: url('images/Deutsche Tischkultur.jpg');"></div>
@@ -376,7 +378,7 @@
                 
                 // Preload all images
                 const imageUrls = [
-                    'images/kultur_bg.jpg',
+                    'images/herooooo.jpg',
                     'images/Regionale Spezialitäten.jpg',
                     'images/Feiertage & Feste.jpg',
                     'images/Deutsche Tischkultur.jpg'
