--- a/KochZeit/index.html
+++ b/KochZeit/index.html
@@ -125,7 +125,9 @@
         <!-- Hero Section -->
         <section class="hero">
             <div class="hero-images">
-                <div class="hero-image active" style="background-image: url('images/hero.webp');"></div>
+                <div class="hero-image active" style="background-image: url('images/hero.webp');">
+                    <img src="images/hero.webp" alt="" loading="eager" fetchpriority="high" style="display: none;">
+                </div>
                 <div class="hero-image" style="background-image: url('images/Traditioneller Schweinebraten.jpg');"></div>
                 <div class="hero-image" style="background-image: url('images/Schwarzwälder Kirschtorte.webp');"></div>
                 <div class="hero-image" style="background-image: url('images/Die Kunst des Brotbackens.webp');"></div>
