--- a/KochZeit/recipes.html
+++ b/KochZeit/recipes.html
@@ -31,7 +31,7 @@
     <meta name="twitter:image" content="https://www.kochzeit.de/images/recipes-og.jpg">
     
     <link rel="icon" type="image/jpeg" href="images/favicon.jpg">
-    <link rel="preload" as="image" href="images/rezepte_bg.jpg">
+    <link rel="preload" as="image" href="images/herooo.jpg">
     <link rel="preload" as="image" href="images/Traditioneller Schweinebraten.jpg">
     <link rel="preload" as="image" href="images/Wiener Schnitzel.webp">
     <link rel="preload" as="image" href="images/Schwarzwälder Kirschtorte.webp">
@@ -131,7 +131,9 @@
     <main>
         <section class="rezepte-hero">
             <div class="hero-images">
-                <div class="hero-image active" style="background-image: url('images/rezepte_bg.jpg');"></div>
+                <div class="hero-image active" style="background-image: url('images/herooo.jpg');">
+                    <img src="images/herooo.jpg" alt="" loading="eager" fetchpriority="high" style="display: none;">
+                </div>
                 <div class="hero-image" style="background-image: url('images/Traditioneller Schweinebraten.jpg');"></div>
                 <div class="hero-image" style="background-image: url('images/Wiener Schnitzel.webp');"></div>
                 <div class="hero-image" style="background-image: url('images/Schwarzwälder Kirschtorte.webp');"></div>
@@ -607,7 +609,7 @@
                 
                 // Preload all images
                 const imageUrls = [
-                    'images/rezepte_bg.jpg',
+                    'images/herooo.jpg',
                     'images/Traditioneller Schweinebraten.jpg',
                     'images/Wiener Schnitzel.webp',
                     'images/Schwarzwälder Kirschtorte.webp'
