--- a/KochZeit/tips.html
+++ b/KochZeit/tips.html
@@ -31,7 +31,7 @@
     <meta name="twitter:image" content="https://www.kochzeit.de/images/tips-og.jpg">
     
     <link rel="icon" type="image/jpeg" href="images/favicon.jpg">
-    <link rel="preload" as="image" href="images/tipps_bg.jpg">
+    <link rel="preload" as="image" href="images/heroooo.jpg">
     <link rel="preload" as="image" href="images/Küchenorganisation.jpg">
     <link rel="preload" as="image" href="images/Gewürze & Kräuter.webp">
     <link rel="preload" as="image" href="images/Energiesparen beim Kochen.jfif">
@@ -124,7 +124,9 @@
     <main>
         <section class="tipps-hero">
             <div class="hero-images">
-                <div class="hero-image active" style="background-image: url('images/tipps_bg.jpg');"></div>
+                <div class="hero-image active" style="background-image: url('images/heroooo.jpg');">
+                    <img src="images/heroooo.jpg" alt="" loading="eager" fetchpriority="high" style="display: none;">
+                </div>
                 <div class="hero-image" style="background-image: url('images/Küchenorganisation.jpg');"></div>
                 <div class="hero-image" style="background-image: url('images/Gewürze & Kräuter.webp');"></div>
                 <div class="hero-image" style="background-image: url('images/Energiesparen beim Kochen.jfif');"></div>
@@ -315,7 +317,7 @@
                 
                 // Preload all images
                 const imageUrls = [
-                    'images/tipps_bg.jpg',
+                    'images/heroooo.jpg',
                     'images/Küchenorganisation.jpg',
                     'images/Gewürze & Kräuter.webp',
                     'images/Energiesparen beim Kochen.jfif'
