--- a/KochZeit/cookies-policy.html
+++ b/KochZeit/cookies-policy.html
@@ -101,7 +101,7 @@
                 <div class="logo">
                     <a href="index.html">KochZeit</a>
                 </div>
-                <button class="menu-toggle" aria-label="Menu">Menu</button>
+                <button class="menu-toggle" aria-label="Menu">☰</button>
                 <ul class="nav-menu">
                     <li><a href="index.html">Startseite</a></li>
                     <li><a href="news.html">Nachrichten</a></li>
