--- a/KochZeit/tipps/einkauf-lagerung.html
+++ b/KochZeit/tipps/einkauf-lagerung.html
@@ -23,7 +23,7 @@
         <nav>
             <div class="container">
                 <div class="logo"><a href="../index.html">KochZeit</a></div>
-                <button class="menu-toggle" aria-label="Menu">Menu</button>
+                <button class="menu-toggle" aria-label="Menu">☰</button>
                 <ul class="nav-menu">
                     <li><a href="../index.html">Startseite</a></li>
                     <li><a href="../news.html">Nachrichten</a></li>
