--- a/CryptoEdu/index.html
+++ b/CryptoEdu/index.html
@@ -714,7 +714,7 @@
                     <li><a href="#home">Главная</a></li>
                     <li><a href="#market">Рынок</a></li>
                     <li><a href="#about">О проекте</a></li>
-                    <li><a href="#crypto">Что такое криптовалюты</a></li>
+                    <li><a href="#crypto">О криптовалютах</a></li>
                     <li><a href="#calculator">Калькулятор</a></li>
                     <li><a href="#planner">Маршрут</a></li>
                     <li><a href="#security">Безопасность</a></li>
@@ -1767,4 +1767,5 @@
     </script>
 </body>
 </html>
+
 
