--- a/Dubai_Famili/article-2.html
+++ b/Dubai_Famili/article-2.html
@@ -85,7 +85,7 @@
       rel="noopener"
       aria-label="Get it on Google Play"
       class="google-play-badge">
-    <div class="google-play-icon"></div>
+    <img src="assets/img/logo play.webp" alt="Google Play" class="google-play-icon">
     <div class="google-play-text">
      <span class="google-play-text-top">GET IT ON</span>
      <span class="google-play-text-bottom">Google Play</span>
