--- a/Dubai_Famili/contact.html
+++ b/Dubai_Famili/contact.html
@@ -26,7 +26,6 @@
 <section style="position:relative;padding:80px 20px;background:var(--bg-section);background-image:url('assets/img/Contact & Ticket Support.jpg');background-size:cover;background-position:center;background-attachment:fixed">
  <div style="position:absolute;top:0;left:0;right:0;bottom:0;background:rgba(44,62,80,.7);z-index:1"></div>
  <div style="position:relative;z-index:2">
-  <div class="section-number">05</div>
   <div class="section-header">
    <span class="section-label">CONTACT</span>
   </div>
@@ -219,7 +218,7 @@
       rel="noopener"
       aria-label="Get it on Google Play"
       class="google-play-badge">
-    <div class="google-play-icon"></div>
+    <img src="assets/img/logo play.webp" alt="Google Play" class="google-play-icon">
     <div class="google-play-text">
      <span class="google-play-text-top">GET IT ON</span>
      <span class="google-play-text-bottom">Google Play</span>
