--- a/Dubai_Famili/cookie-policy.html
+++ b/Dubai_Famili/cookie-policy.html
@@ -24,7 +24,6 @@
 </div>
 <main class="container">
 <section style="position:relative;padding:80px 20px;background:var(--bg-section)">
- <div class="section-number">03</div>
  <div class="section-header">
   <span class="section-label">LEGAL</span>
  </div>
@@ -308,7 +307,7 @@
       rel="noopener"
       aria-label="Get it on Google Play"
       class="google-play-badge">
-    <div class="google-play-icon"></div>
+    <img src="assets/img/logo play.webp" alt="Google Play" class="google-play-icon">
     <div class="google-play-text">
      <span class="google-play-text-top">GET IT ON</span>
      <span class="google-play-text-bottom">Google Play</span>
