--- a/Dubai_Famili/index.html
+++ b/Dubai_Famili/index.html
@@ -23,8 +23,6 @@
  </div>
 </div>
 <section class="hero">
- <div class="cloud-1"></div>
- <div class="cloud-2"></div>
  <div class="container" style="display:grid;grid-template-columns:1fr 1fr;gap:40px;align-items:center;position:relative;z-index:2">
   <div class="hero-content" style="text-align:left">
    <div class="section-label">FAMILY ADVENTURES</div>
@@ -37,7 +35,7 @@
        rel="noopener"
        aria-label="Get it on Google Play"
        class="google-play-badge">
-     <div class="google-play-icon"></div>
+     <img src="assets/img/logo play.webp" alt="Google Play" class="google-play-icon">
      <div class="google-play-text">
       <span class="google-play-text-top">GET IT ON</span>
       <span class="google-play-text-bottom">Google Play</span>
@@ -45,22 +43,15 @@
     </a>
    </div>
    <div class="scroll-down-animation" style="margin-top:40px">
-    <div class="scroll-arrow"></div>
    </div>
   </div>
   <div class="hero-image" style="position:relative;z-index:2">
-   <img src="assets/img/hero.jpg" alt="Dubai Family Adventures" style="width:100%;border-radius:var(--radius);box-shadow:0 10px 40px rgba(0,0,0,.2)">
+   <img src="assets/img/hero.jpg" alt="Dubai Family Adventures" style="width:100%;border-radius:var(--radius);box-shadow:0 2px 8px rgba(0,0,0,.15)">
   </div>
- </div>
- <div class="scroll-indicator">
-  <span class="active">01</span>
-  <span>02</span>
-  <span>03</span>
  </div>
 </section>
 <main class="container">
-<section style="position:relative;padding:80px 20px;background:var(--bg-section)">
- <div class="section-number">01</div>
+<section style="position:relative;padding:40px 20px;background:var(--bg-section)">
  <div class="section-header">
   <span class="section-label">TOP EXPERIENCES</span>
  </div>
@@ -86,7 +77,7 @@
   </div>
  </div>
 </section>
-<section style="padding:60px 20px;background:var(--bg-dark)">
+<section style="padding:40px 20px;background:#fafafa">
  <div class="stats-grid">
   <div class="stat-card">
    <span class="stat-number">50+</span>
@@ -106,7 +97,7 @@
   </div>
  </div>
 </section>
-<section style="padding:60px 20px;background:var(--bg-section)">
+<section style="padding:40px 20px;background:var(--bg-section)">
  <h2 style="text-align:center;margin-bottom:40px">Why Choose Dubai Family Adventure?</h2>
  <div class="accordion">
   <div class="accordion-item">
@@ -155,7 +146,7 @@
   </div>
  </div>
 </section>
-<section style="padding:60px 20px;background:var(--bg-section)">
+<section style="padding:40px 20px;background:var(--bg-section)">
  <h2 style="text-align:center;margin-bottom:40px">Latest Articles & Tips</h2>
  <div class="grid grid-3">
   <div class="article">
@@ -206,7 +197,7 @@
       rel="noopener"
       aria-label="Get it on Google Play"
       class="google-play-badge">
-    <div class="google-play-icon"></div>
+    <img src="assets/img/logo play.webp" alt="Google Play" class="google-play-icon">
     <div class="google-play-text">
      <span class="google-play-text-top">GET IT ON</span>
      <span class="google-play-text-bottom">Google Play</span>
