--- a/Dubai_Famili/locations.html
+++ b/Dubai_Famili/locations.html
@@ -22,25 +22,8 @@
   </nav>
  </div>
 </div>
-<div class="floating-elements">
- <div class="float-circle"></div>
- <div class="float-circle"></div>
- <div class="float-circle"></div>
- <div class="float-circle"></div>
- <div class="float-circle"></div>
- <div class="float-circle"></div>
- <div class="water-slide"></div>
- <div class="water-slide"></div>
- <div class="water-slide"></div>
- <div class="safari-icon"></div>
- <div class="safari-icon"></div>
- <div class="safari-icon"></div>
- <div class="wave"></div>
- <div class="wave"></div>
-</div>
 <main class="container" style="position:relative;z-index:2">
 <section style="position:relative;padding:80px 20px;background:linear-gradient(rgba(0,0,0,.4),rgba(0,0,0,.4)),url('assets/img/Nature, Water & Play Locations.jpg');background-size:cover;background-position:center;background-attachment:fixed">
- <div class="section-number">02</div>
  <div class="section-header">
   <span class="section-label">LOCATIONS</span>
  </div>
@@ -337,7 +320,7 @@
       rel="noopener"
       aria-label="Get it on Google Play"
       class="google-play-badge">
-    <div class="google-play-icon"></div>
+    <img src="assets/img/logo play.webp" alt="Google Play" class="google-play-icon">
     <div class="google-play-text">
      <span class="google-play-text-top">GET IT ON</span>
      <span class="google-play-text-bottom">Google Play</span>
