--- a/Dubai_Famili/routes.html
+++ b/Dubai_Famili/routes.html
@@ -24,7 +24,6 @@
 </div>
 <main class="container">
 <section style="position:relative;padding:80px 20px;background:linear-gradient(rgba(0,0,0,.4),rgba(0,0,0,.4)),url('assets/img/Family Routes 1-2 Days.jpg');background-size:cover;background-position:center;background-attachment:fixed">
- <div class="section-number">04</div>
  <div class="section-header">
   <span class="section-label">ROUTES</span>
  </div>
@@ -213,7 +212,7 @@
       rel="noopener"
       aria-label="Get it on Google Play"
       class="google-play-badge">
-    <div class="google-play-icon"></div>
+    <img src="assets/img/logo play.webp" alt="Google Play" class="google-play-icon">
     <div class="google-play-text">
      <span class="google-play-text-top">GET IT ON</span>
      <span class="google-play-text-bottom">Google Play</span>
